{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 30,
  "lineage": "29c4e9f4-65a3-d11f-9121-ba5bfcabb8e0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "net_interface_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5e3fa8cf-316c-4803-87a3-5ab5a18f5aad/resourceGroups/q2-rg/providers/Microsoft.Network/networkInterfaces/q2-net-one",
            "internal_domain_name_suffix": "4wlzummjeo1uppqzxdxbru41lf.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/5e3fa8cf-316c-4803-87a3-5ab5a18f5aad/resourceGroups/q2-rg/providers/Microsoft.Network/virtualNetworks/q1-vnet/subnets/subnet_one"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-DC-C8-71",
            "name": "q2-net-one",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "q2-rg",
            "virtual_machine_id": "/subscriptions/5e3fa8cf-316c-4803-87a3-5ab5a18f5aad/resourceGroups/q2-rg/providers/Microsoft.Compute/virtualMachines/q2-vm-one"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "net_interface_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5e3fa8cf-316c-4803-87a3-5ab5a18f5aad/resourceGroups/q2-rg/providers/Microsoft.Network/networkInterfaces/q2-net-two",
            "internal_domain_name_suffix": "4wlzummjeo1uppqzxdxbru41lf.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/5e3fa8cf-316c-4803-87a3-5ab5a18f5aad/resourceGroups/q2-rg/providers/Microsoft.Network/virtualNetworks/q1-vnet/subnets/subnet_two"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-DC-C9-66",
            "name": "q2-net-two",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "q2-rg",
            "virtual_machine_id": "/subscriptions/5e3fa8cf-316c-4803-87a3-5ab5a18f5aad/resourceGroups/q2-rg/providers/Microsoft.Compute/virtualMachines/q2-vm-two"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5e3fa8cf-316c-4803-87a3-5ab5a18f5aad/resourceGroups/q2-rg/providers/Microsoft.Network/networkSecurityGroups/q2-nsg",
            "location": "northeurope",
            "name": "q2-nsg",
            "resource_group_name": "q2-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "port80",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/5e3fa8cf-316c-4803-87a3-5ab5a18f5aad/resourceGroups/q2-rg/providers/Microsoft.Network/networkSecurityGroups/q2-nsg/securityRules/port80",
            "name": "port80",
            "network_security_group_name": "q2-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "q2-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/5e3fa8cf-316c-4803-87a3-5ab5a18f5aad/resourceGroups/q2-rg/providers/Microsoft.Network/networkSecurityGroups/q2-nsg/securityRules/port80",
            "name": "port80",
            "network_security_group_name": "q2-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "q2-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "virtual_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "10.0.0.4"
            ],
            "guid": "319a97f5-2389-47b7-be19-b8ee18d3db5d",
            "id": "/subscriptions/5e3fa8cf-316c-4803-87a3-5ab5a18f5aad/resourceGroups/q2-rg/providers/Microsoft.Network/virtualNetworks/q1-vnet",
            "location": "northeurope",
            "name": "q1-vnet",
            "resource_group_name": "q2-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/5e3fa8cf-316c-4803-87a3-5ab5a18f5aad/resourceGroups/q2-rg/providers/Microsoft.Network/virtualNetworks/q1-vnet/subnets/subnet_one",
                "name": "subnet_one"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/5e3fa8cf-316c-4803-87a3-5ab5a18f5aad/resourceGroups/q2-rg/providers/Microsoft.Network/virtualNetworks/q1-vnet/subnets/subnet_two",
                "name": "subnet_two"
              }
            ],
            "tags": {
              "environment": "q2"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    }
  ]
}